# goose

./: .gitignore  Cargo.toml  README.md  boot.asm  boot64.asm  build.rs  grub.cfg  i686-bruh_os.json  justfile  linker.ld  x86_64-bruh_os.json
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/src/: boot_info.rs  debug.rs  event.rs  gdt.rs  idt.rs  main.rs  mem.asm  mem.rs  multiboot_header.rs  pic.rs  pit.rs  vga.rs
loader/: Cargo.toml  build.rs
loader/src/: boot.asm  load.asm  main.rs
runner/: main.rs
src/: boot.asm  main.rs  multiboot.rs
