[package]
name = "bruh_os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bruh_os"
test = false
bench = false

[dependencies]
common = { path = "./common" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [
        "common",
        "loader",
        # "runner"
]

