[package]
name = "runner"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "runner"
path = "runner/main.rs"

[build-dependencies]
llvm-tools = "0.1.1"
walkdir = "2.4.0"

[build-dependencies.kernel]
path = "kernel"
artifact = "staticlib"
target = "x86_64-unknown-none"
test = true

[workspace]
members = [
  "kernel",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
